fix dark mode font colour on settings page

--- a/styles/settings.css
+++ b/styles/settings.css
@@ -66,7 +66,7 @@ select, option, label {
 	position: relative;
 }
 option {
-	color: var(--color);
+	color: #000;
 }
 select:focus:hover {
 	color: var(--color);
